# ProofGOAT

./: .gitignore  FL_generation.py  README.md  create_env.sh  install_lean.sh  large_scale_config.yaml  project_config.yaml  pyproject.toml  requirements.txt  test_config.yaml  toy_pipeline.py
data/: README.md  examples.yaml  fake_pairs.jsonl  pairs.jsonl
data/raw/: test.parquet  validation.parquet
decode_output/: embedding_metadata.out  test.txt
docs/: AUGMENTED_OT_CFM.md
fl_outputs/: Rudin_ex_1_1a.lean
outputs/: lean_embeddings.parquet  pairs_meta.parquet
outputs/neural_ot_test/run_20251127_105552/: config.json
raw/: example.lean
scripts/: README_RANDOM_EMBEDDINGS.md  analyze_results.py  check_stats.py  compute_augmented_ot.py  compute_ot_couplings.py  compute_ot_couplings_streaming.py  create_herald_pairs.py  create_pairs.py  download_data.py  eval_augmented_ot.py  eval_augmented_ot_epochs.py  eval_neural_ot_alignment.py  explore_embeddings.py  extract_embeddings.py  generate_random_embeddings.py  list_dropbox_files.py  load_and_use_model.py  sanity_neural_ot.py  test_lean.py  test_neural_ot_random.py  train_augmented_ot.py  train_augmented_ot_online.py  train_neural_ot.py  train_neural_ot_old.py  train_neural_ot_streaming.py  visualize_ot_coupling.py  visualize_ot_coupling_colab.py
src/: alignment.py  decode.py  io_utils.py  model_utils.py
src/flows/: dataset.py  inference.py  integration.py  losses.py  neural_ot.py  velocity_field.py
toy_outputs/: example_proof.lean  lean_emb.npy  nl_emb.npy
(+6 files in other folders)
